# learn-solochain

./: Cargo.toml  README.md  auth_accounts_example.yml  current_task.md  customSpec.json  example_accounts.yml  flake.nix
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  dev_accounts.rs  eth.rs  main.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
pallets/claim/: Cargo.toml
pallets/claim/src/: lib.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
runtime/src/precompiles/: custom_precompiles.rs  hello_precompile.rs  mod.rs
scripts/: derive_ed25519_key.sh  export_local_spec.sh  generate_sr25519_key.sh  remove_bob_chain.sh  run_bob_node.sh
scripts/custom_chain/: add_keys_to_keystore.sh  add_keys_to_keystore_with.sh  node.sh  run_first_node.sh  run_first_node_with.sh  run_participant_node.sh  run_participant_node_with.sh
scripts/local_testnet/: remove_alice_chain.sh  run_alice_node.sh
scripts/utils/: derive_ed25519_key.sh  export_local_spec.sh  generate_sr25519_key.sh  spec_to_raw.sh
