[workspace.package]
license     = "MIT-0"
authors     = ["Parity Technologies <admin@parity.io>"]
homepage    = "https://paritytech.github.io/polkadot-sdk/"
repository  = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition     = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
# Local
solochain-template-runtime      = { path = "./runtime", default-features = false }
pallet-template                 = { path = "./pallets/template", default-features = false }
pallet-claim                    = { path = "./pallets/claim", default-features = false }
# Independent
async-trait                     = { version = "0.1" }
clap                            = { version = "4.5.3" }
futures                         = { version = "0.3.30" }
jsonrpsee                       = { version = "0.23.2" }
serde_json                      = { version = "1.0.114", default-features = false }
scale-info                      = { version = "2.11.3", default-features = false, features = ["derive"] }
codec                           = { version = "3.6.12", default-features = false, package = "parity-scale-codec", features = ["derive"] }
log                             = { version = "0.4.21", default-features = false }
hex-literal                     = { version = "0.4.1" }
# Substrate Client
sc-basic-authorship             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-cli                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sc-client-api                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-aura               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-grandpa            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-manual-seal        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-executor                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network-sync                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-offchain                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-rpc                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-rpc-api                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-service                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sc-telemetry                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool-api         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
# Substrate Primitive
sp-api                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-block-builder                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-blockchain                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus-aura               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-consensus-grandpa            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-core                         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-externalities                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-genesis-builder              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-inherents                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-io                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-keyring                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-offchain                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-runtime                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-session                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-storage                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-timestamp                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-transaction-pool             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-version                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
# Substrate FRAME
frame                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", package = "polkadot-sdk-frame", default-features = false }
frame-benchmarking              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-executive                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-support                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-benchmarking       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-rpc-runtime-api    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-aura                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-balances                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-grandpa                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-sudo                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-timestamp                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment-rpc  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
# Substrate Utility
frame-benchmarking-cli          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
prometheus-endpoint             = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-build-script-utils    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-frame-rpc-system      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-wasm-builder          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
frame-try-runtime               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false } 
# Frontier Primitive
# TODO: change master to appropriate pinned branch
#       currently "stable2407" not work
fp-evm                          = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
# NOTE: branch = fp-account on "stable2407" had compilatin problem
#       dependabot/cargo/serde-1.0.209 was the newest branch after "stable2407"
# fp-account          = { git = "https://github.com/polkadot-evm/frontier.git", branch = "dependabot/cargo/serde-1.0.209", default-features = false }
fp-account                      = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
fp-rpc                          = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
fp-self-contained               = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
fp-dynamic-fee                  = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
# Frontier FRAME
pallet-evm                      = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
pallet-evm-chain-id             = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
pallet-evm-precompile-modexp    = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
pallet-evm-precompile-sha3fips  = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
pallet-evm-precompile-simple    = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
pallet-ethereum                 = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
pallet-base-fee                 = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
pallet-dynamic-fee              = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
# Frontier Client
fc-api                          = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master" }
fc-cli                          = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
fc-consensus                    = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master" }
fc-db                           = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
fc-mapping-sync                 = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
fc-rpc                          = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master", default-features = false }
fc-rpc-core                     = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master" }
fc-storage                      = { git = "https://github.com/polkadot-evm/frontier.git", branch = "master" }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
